Fix overflow-x issue in style.css

--- a/assets/style.css
+++ b/assets/style.css
@@ -93,7 +93,7 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
   scroll-snap-type: y mandatory;
 }
 
